--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Google+Sans" rel="stylesheet">
+        <link rel="icon" href="./img/CoolTab.svg">
         <style>
             body {
                 width: 100%;
@@ -13,8 +14,10 @@
                 background: url('./taptappingu.gif') no-repeat;
                 background-size: cover;
                 overflow-x: hidden;
+                color: white;
+                font-family: 'Inter';
             }
-            .glass {
+            [glass] {
                 background: #282828B5;
                 backdrop-filter: blur(15px) contrast(80%);
                 box-shadow: 0 0 10px rgba(0,0,0,0.5);
@@ -141,10 +144,10 @@
                 gap: 12px;
             }
             #clock_shell iframe { height: 66px; width: 66px; border: none; }
-            #clock_shell span { color: white; font-family: 'Inter'; }
-            .widgets { color: white; font-size: 24px; display: flex; align-items: center; gap: 12px; }
+            #clock_shell span { color: white; }
+            .widgets { color: white; font-size: 24px; display: flex; flex-direction: row; align-items: center; gap: 12px; }
             .widgets a { text-decoration: none; }
-            dialog {
+            #apps {
                 position: absolute;
                 top: 110px;
                 right: -80%;
@@ -154,7 +157,7 @@
                 border-radius: 16px;
                 overflow-x: hidden;
             }
-            dialog:not([open]) { display: none; }
+            #apps:not([open]) { display: none; }
             .apps_grid {
                 display: grid;
                 width: 255px;
@@ -195,10 +198,42 @@
             #suggestions.active { display: block; }
             .suggestion-item { padding: 8px 18px; cursor: pointer; }
             .suggestion-item:hover { background: #3c3c3c; }
+            #changelog {
+                border-radius: 32px;
+                overflow-x: hidden;
+                width: 600px;
+                height: 700px; /*No pun included, I just liked the aspect ratio 6:7*/
+                padding: 0;
+                border: none;
+                outline: none;
+            }
+            #changelog .content {
+                padding: 16px 32px;
+                gap: 10px;
+                width: 100%;
+                height: fit-content;
+                color: white;
+            }
+            #changelog .content img { width: 536px; height: 265px; }
+            #changelog .content button { 
+                background: #333333;
+                color: white;
+                position: fixed;
+                right: 32px;
+                padding: 4px 12px;
+                font-size: 24px;
+                outline: none;
+                border: 1px solid white;
+                border-radius: 8px;
+                cursor: pointer;
+                transition: transform 0.16s ease;
+            }
+            #changelog .content button:hover { transform: scale(1.01); }
+            #changelog::backdrop { background: black; opacity: 0.6; }
         </style>
     </head>
     <body>
-        <span style="position: absolute; top: 1px; left: 1.5px; font-family: 'Inter'; color: white; font-size: 12px;">Under Apache-2.0 License - Version 1.0 by Mewinator</span>
+        <span style="position: absolute; top: 1px; left: 1.5px; color: white; font-size: 12px;">Under Apache-2.0 License - Version 1.0 by Mewinator</span>
         <nav>
             <div id="clock_shell">
                 <iframe src="./clock.html"></iframe>
@@ -210,8 +245,9 @@
                 </div>
             </div>
             <div class="widgets">
-                <a style="color: white; font-family: 'Inter';" id="mail" href="https://mail.google.com/"><span>Mail</span></a>
+                <a style="color: white;" id="mail" href="https://mail.google.com/"><span>Mail</span></a>
                 <span id="app_button" class="material-symbols-outlined" style="cursor: pointer; font-size: 32px;">apps</span>
+                <span class="material-symbols-outlined" style="cursor: pointer; font-size: 32px;" onclick="window.location.href='./settings.html'">settings</span>
             </div>
         </nav>
         <div class="search_bar">
@@ -222,13 +258,13 @@
             <!--<a href="[(AI URL)]"><button class="ai init"><span>[(AI NAME)]</span></button></a>-->
         </div>
         <div id="suggestions"></div>
-        <div class="glass bottom_bar">
+        <div glass class=" bottom_bar">
             <a title="Firebase Studio - My personal favorite vscode editor on the web" href="https://studio.firebase.google.com"><img style="width: 53px; height: 53px;" src="./img/firebase.png"></a>
             <a title="Onecompiler - Fast online code editor of choice" href="https://onecompiler.com"><img src="./img/onecompiler.png"></a>
             <a title="Figma - Design editor for UI/UX" href="https://figma.com"><img style="border-radius: 9px;" src="./img/figma.png"></a>
             <a title="Github - Hmm.. lots of code" href="https://github.com"><img style="border-radius: 9px;" src="./img/github.svg"></a>
         </div>
-        <dialog class="glass" id="apps">
+        <dialog glass id="apps">
             <div style="display: flex; align-items: center; background: #4c4c4c; height: 16px; width: 100%; border-radius: 16px 16px 0 0; padding: 6px;">
                 <svg viewBox="0 0 50 14" height="14" width="50">
                     <circle cx="7" cy="7" r="7" fill="#FF5656"></circle>
@@ -237,6 +273,26 @@
                 </svg>
             </div>
             <div class="apps_grid"></div>
+        </dialog>
+        <dialog id="changelog" glass>
+            <div style="display: flex; align-items: center; background: #4c4c4c; height: 18px; width: 100%; border-radius: 16px 16px 0 0; padding: 6px;">
+                <svg viewBox="0 0 64 16" height="14" width="50">
+                    <circle cx="14" cy="8" r="7" fill="#FF5656"></circle>
+                    <circle cx="32" cy="8" r="7" fill="#FFCF56"></circle>
+                    <circle cx="50" cy="8" r="7" fill="#44D950"></circle>
+                </svg>
+            </div>
+            <div class="content">
+                <h1>Cooltab version 1.1</h1>
+                <img src="./img/CoolTab.svg">
+                <h3>Changelog</h3>
+                <ul>
+                    <li>Added changelog menu</li>
+                    <li>There is now a logo!</li>
+                    <li>New settings page</li>
+                </ul>
+                <button onclick="hideChangelog()">Close</button>
+            </div>
         </dialog>
         <script defer src="./newtab.js"></script>
     </body>
