--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
             body {
                 width: 100%;
                 height: 100%;
-                background: url('./taptappingu.gif') no-repeat;
+                --bg-url: url('./taptappingu.gif');
+                background-image: var(--bg-url);
                 background-size: cover;
                 background-attachment: fixed;
                 background-position: center;
@@ -73,7 +74,7 @@
                 transition: opacity 400ms linear;
             }
             .ai.init::before { animation: initial-fade-rotate 2s linear forwards; }
-            .ai::before { /* Conic gradient border */
+            .ai::before {
                 content: '';
                 position: absolute;
                 top: 50%;
@@ -97,7 +98,7 @@
                 transition: opacity 400ms linear;
             }
             .ai:hover::before { opacity: 1; animation: rotate-gradient 5000ms linear infinite; }
-            .ai::after { /* The mask */
+            .ai::after {
                 content: '';
                 position: absolute;
                 top: 1.5px;
@@ -168,7 +169,7 @@
                 opacity: 1;
                 grid-template-rows: auto;
                 grid-template-columns: repeat(3, 1fr);
-                row-gap: 12px;
+                row-gap: 0;
                 column-gap: 12px;
                 padding: 12px;
                 overflow-x: hidden;
@@ -176,14 +177,41 @@
                 scrollbar-width: 100px;
                 scrollbar-color: #282828 transparent;
             }
-            .apps_grid a > img {
-                width: 72px;
-                height: 72px;
-                object-fit: cover;
+            .apps_grid a {
                 border-radius: 12px;
+                background: none;
+                transition: background 0.16s ease;
+                padding: 12px;
+                min-height: 64px;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 6px;
+                text-decoration: none;
+                position: relative;
+            }
+            .apps_grid a > img {
+                width: 48px;
+                height: 48px;
+                object-fit: cover;
                 transition: transform 0.16s ease;
             }
-            .apps_grid a > img:hover { transform: translateY(-6px); }
+            .apps_grid a > img:hover { transform: translateY(-2px); }
+            .apps_grid a:hover { background: #545454; }
+            .apps_grid span {
+                color: white;
+                font-size: 12px;
+                line-height: 1;
+                white-space: nowrap;
+                position: absolute;
+                left: 50%;
+                transform: translateX(-50%);
+                bottom: 8px;
+                opacity: 0;
+                transition: opacity 120ms ease;
+                pointer-events: none;
+            }
+            .apps_grid a:hover > span { opacity: 1; }
             #suggestions {
                 background: #282828;
                 border-radius: 24px;
@@ -204,7 +232,7 @@
                 border-radius: 32px;
                 overflow-x: hidden;
                 width: 600px;
-                height: 700px; /*No pun included, I just liked the aspect ratio 6:7*/
+                height: 700px; /*No joke included, I just liked the aspect ratio of 6:7*/
                 padding: 0;
                 border: none;
                 outline: none;
@@ -235,7 +263,7 @@
         </style>
     </head>
     <body>
-        <span style="position: absolute; top: 1px; left: 1.5px; color: white; font-size: 12px;">Under Apache-2.0 License - Version 1.2 by Mewinator</span>
+        <span style="position: absolute; top: 1px; left: 1.5px; color: white; font-size: 12px;">Under Apache-2.0 License - Version 1.3 by Mewinator</span>
         <nav>
             <div id="clock_shell">
                 <iframe src="./clock.html"></iframe>
@@ -285,16 +313,27 @@
                 </svg>
             </div>
             <div class="content">
-                <h1>Cooltab version 1.2</h1>
+                <h1>Cooltab version 1.3</h1>
                 <img src="./img/CoolTab.svg">
                 <h2>Changelog</h2>
                 <ul style="font-size: 20px;">
-                    <li>Settings page has its first item.</li>
-                    <li>New background customization.</li>
+                    <li>New structure for apps/site storage
+                        <ul>
+                            <li>The apps have titles that you can hover to see</li>
+                        </ul>
+                    </li>
+                    <li>LocalStorage no more!
+                        <ul>
+                            <li>There is no more localStorage used in this.</li>
+                            <li>Blob: storage is now used to save all data.</li>
+                        </ul>
+                    </li>
+                    <li>Added storage.js</li>
                 </ul>
                 <button onclick="hideChangelog()">Close</button>
             </div>
         </dialog>
+        <script defer src="./storage.js"></script>
         <script defer src="./newtab.js"></script>
     </body>
 </html>
