--- a/settings.html
+++ b/settings.html
@@ -50,6 +50,7 @@
                 display: flex;
                 align-items: center;
                 flex-direction: column;
+                gap: 12px;
             }
             .item button {
                 background: #3B3B3B;
@@ -78,9 +79,14 @@
                 <img id="previewImage" src="taptappingu.gif" alt="Background preview" style="border-radius: 16px; width: 264px; height: auto;">
                 <h2>Background image</h2>
                 <input type="file" id="fileUpload" accept=".jpg, .png, .gif, .jpeg" style="display:none;">
+                <div>
+                    <input type="checkbox" id="blend_px">
+                    <span>Blend pixels</span>
+                </div>
                 <button onclick="document.getElementById('fileUpload').click();">Upload<span class="material-symbols-outlined">upload</span></button>
             </div>
         </main>
+        <script src="./storage.js"></script>
         <script src="./settings.js"></script>
     </body>
 </html>
